2017-08-02  Uros Bizjak  <ubizjak@gmail.com>

	PR target/81644
	* gcc.target/i386/pr81644.c: New test.

2017-08-02  Tom de Vries  <tom@codesourcery.com>

	* gcc.dg/Walloca-14.c: Use relative line number.

2017-08-02  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/funcspec-56.inc (no_3dnowa): Properly
	test "no-3dnowa" target attribute.

2017-08-02  Marek Polacek  <polacek@redhat.com>

	PR c/81289
	* gcc.dg/noncompile/pr81289.c: New test.

	PR c/81448
	PR c/81306
	* c-c++-common/Wmultistatement-macros-13.c: New test.

2017-08-02  Jakub Jelinek  <jakub@redhat.com>

	PR c++/81640
	* g++.dg/warn/Wshadow-compatible-local-2.C: New test.

	PR middle-end/79499
	* gcc.dg/pr79499.c: New test.

2017-08-02  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81633
	* gcc.dg/vect/pr81633.c: New testcase.

2017-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.dg/guality/pr25967-1.c: New test.
	* gcc.dg/guality/pr25967-2.c: Likewise.
	* gcc.dg/torture/pr25967-1.c: Likewise.
	* gcc.dg/torture/pr25967-2.c: Likewise.

2017-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81654
	* gcc.target/i386/pr81654.c: New test.

2017-08-01  Thomas König  <tkoenig@gcc.gnu.org>

	PR fortran/79312
	* gfortran.dg/logical_assignment_1.f90:  New test.

2017-08-01  Martin Liska  <mliska@suse.cz>

	PR middle-end/70140
	* gcc.dg/string-opt-1.c: Adjust test-case to scan for memcpy.

2017-08-01  Martin Liska  <mliska@suse.cz>

	Revert r250771
	Make mempcpy more optimal (PR middle-end/70140).

2017-08-01  Jakub Jelinek  <jakub@redhat.com>

	PR target/81622
	* gcc.target/powerpc/pr81622.c: New test.

2017-08-01  Steve Ellcey  <sellcey@cavium.com>

	PR tree-optimization/80925
	* gcc.dg/vect/vect-28.c: Add
	--param vect-max-peeling-for-alignment=0 option.
	Remove unaligned access and peeling checks.
	* gcc.dg/vect/vect-33-big-array.c: Ditto.
	* gcc.dg/vect/vect-70.c: Ditto.
	* gcc.dg/vect/vect-87.c: Ditto.
	* gcc.dg/vect/vect-88.c: Ditto.
	* gcc.dg/vect/vect-91.c: Ditto.